[package]
name = "referral_list"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12.8", features = ["cookies", "json"] }
reqwest_cookie_store = { version = "0.8.0" }
dotenvy = { version = "0.15.7" }
anyhow = { version = "1.0.89" }
clap = { version = "4.5.20", features = ["derive"] }
dialoguer = { version = "0.11" }
indicatif = { version = "0.17" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_repr = { version = "0.1" }
serde_with = { version = "3.11" }
chrono = { version = "0.4", features = ["serde"] }
base64 = { version = "0.22" }
env_logger = { version = "0.11" }
log = { version = "0.4" }
rand = { version = "0.8.5" }
